tests/fixtures/errors/invalid_import_empty_path.puml
@startuml
!import
Alice -> Bob: unreachable
@enduml
